Starting to finish up media queries

--- a/code/index.html
+++ b/code/index.html
@@ -42,9 +42,8 @@
       <img src="./images/Ballerina-forest.png" alt="Ballerina dancing in a beautiful forest." class="big-news-image">
     </div>
     <div>
-      <p id="big-news-category"><a href="#big-news">LOREM</a></p><br>
-
-      <p id="big-news-extract"><a href="#big-news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+      <p class="big-news-category"><a href="#big-news">LOREM</a></p><br>
+      <p class="big-news-extract"><a href="#big-news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor
           incididunt ut labore et
           dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -60,22 +59,22 @@
     <div class="other-news-container">
       <div class="other-news-box">
         <img src="./images/Barre.jpg" alt="Ballerina in a black dress doing barre." class="other-news-image" />
-        <p id="other-news-extract"><a href=#other-news>Lorem ipsum dolor sit amet.</a></p>
+        <p class="other-news-extract"><a href=#other-news>Lorem ipsum dolor sit amet.</a></p>
       </div>
       <div class="other-news-box">
         <img src="./images/Black-dress.jpg" alt="Young, pensive woman wearing pink pointe shoes and a black dress."
           class="other-news-image" />
-        <p id="other-news-extract"><a href="#other-news">Lorem ipsum dolor sit amet.</a></p>
+        <p class="other-news-extract"><a href="#other-news">Lorem ipsum dolor sit amet.</a></p>
       </div>
       <div class="other-news-box">
         <img src="./images/Young-ballerinas.jpg" alt="Two young ballerinas dancing in a studio."
           class="other-news-image" />
-        <p id="other-news-extract"><a href="#other-news">Lorem ipsum dolor sit amet.</a></p>
+        <p class="other-news-extract"><a href="#other-news">Lorem ipsum dolor sit amet.</a></p>
       </div>
       <div class="other-news-box">
         <img src="./images/Ballet-shoes.jpg" alt="Pink pointe shoes and a white tulle dress."
           class="other-news-image" />
-        <p id="other-news-extract"><a href="#other-news">Lorem ipsum dolor sit amet.</a></p>
+        <p class="other-news-extract"><a href="#other-news">Lorem ipsum dolor sit amet.</a></p>
       </div>
     </div>
   </section>
