--- a/code/index.html
+++ b/code/index.html
@@ -5,9 +5,11 @@
     <title>The News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="widht= device-width,initial-scale= 1.0">  
-    <style>@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');</style> 
-    <style>@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;0,600;1,500;1,600&display=swap');</style>
-  </head>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Montserrat:ital,wght@0,300;0,400;0,500;1,200&display=swap" rel="stylesheet">
+    </head>
   
   <body>
     <!--*** HEADER SECTION ***-->
