fix indentation, hide buttons and nav-items in mobile view etc.

--- a/code/index.html
+++ b/code/index.html
@@ -19,9 +19,9 @@
       <div class="title-Neo"> 
         <h1>NeoNews</h1>      
       </div>
-      <div class="button">
-        <button class="button1">Log in</button>
-        <button class="button2">Subscribe now</button>
+      <div class="button-container">
+        <button class="button">Log in</button>
+        <button class="button">Subscribe</button>
       </div>
     </header>
 
@@ -29,13 +29,13 @@
     <section class="big-news container">
       <img class="photo-bar" src="img/new2_marjanblan-sAaHII-L-a8-unsplash.png" alt="Image of a Corona virus as a paperball">
       <div class="news-card">       
-        <p class="text"> 
+        <section class="text"> 
         <h3>Coronavirus vaccine: What are human challenge trials?</h3>
         Volunteers are set to be deliberately infected with Covid-19 after the UK Government said it will set up human challenge trials to speed up the development of a vaccine.<br><br>
         Getting vaccines, and preferably those that are easier to use in poor countries than the mRNA vaccine from Pfizer and Moderna that must be shipped frozen, is a motive to join the volunteer organization.<br><br>
         Volunteers say <i>it is very much about justice</i>. According to forecasts, low- and middle-income countries in the world will not receive any corona vaccines until 2022. <br><br>
         Find <a href="https://www.smithsonianmag.com/science-nature/brief-history-human-challenge-trials-180976556/">A Brief History of Human Challenge Trials</a> here. 
-        </p>
+        </section>
       </div>
     </section>
 
@@ -43,36 +43,36 @@
     <section class="more-news container">
       <div class="news-card">
         <img class="photo-bar" src="img/rom-matibag-CnR-cx0BNyg-unsplash.png" alt="Image of a person holding a sign saying Biden Harris">
-        <p class="text">  
+        <section class="text">  
         <h3>She Did It</h3>
         <b>Kamala Harris</b>, becomes the first woman, the first Asian American, and the first Black American to be elected vice president.
         <i>I can’t help but daydream about Harris someday stepping one level up to the presidency</i> says 
         Camilla Brown a contributing writer at <a href="https://www.theatlantic.com/world/">The Atlantic</a>.
-        </p>
+        </section>
       </div>
 
       <div class="news-card">
         <img class="photo-bar" src="img/wrongtog-S92jBfyENpI-unsplash.png" alt="Image of a line in neon color">
-        <p class="text">
+        <section class="text">
         <h2>Saudi Arabia launches 170km city built in a straight line</h2>
         New eco-friendly project launched by the crown prince panned on social media as 'nonsense' and 'dreamed up from a sci-fi movie'
-        </p>
+        </section>
       </div>
 
     <div class="news-card">
       <img class="photo-bar" src="img/helpstay-com-WCmeYmM3jW4-unsplash.png" alt="Image of a building">
-      <p class="text">
+      <section class="text">
       <h2>The escape from Stockholm is increasing</h2>
       More people move from Stockholm than to the region. Net emigration is increasing for the third year in a row, according to statistics from <a href="https://scb.se/en/">Statistics Sweden</a>.
-      </p>
+      </section>
     </div>
 
       <div class="news-card">
         <img class="photo-bar" src="img/jerry-wang-wjwmug0yvHM-unsplash.png" alt="Image of a kid">
-        <p class="text">
+        <section class="text">
         <h2>"Evidence speaks against anxious middle-class parent"</h2>
         Children are irrational, researchers have long believed. Recent studies show that they use both statistics and probability to draw conclusions - and they are more creative problem solvers than adults, according to Stanford professor Alison Gopnik.
-        </p>
+        </section>
       </div>
     </section>
 
@@ -80,35 +80,35 @@
     <section class="other-news container">
       <div class="news-card">
         <img class="photo-bar" src="img/antidepressiv.png" alt="Image of antidepressiv">
-        <p class="text">
+        <section class="text">
         <h3>Antidepressants - the temporary cure that became permanent</h3>
         Ineffective, says the child psychiatrist. A blessing, says the pharmacologist. Even among experts, the rift is deep in the view of antidepressant drugs.
-        </p>
+        </section>
       </div>
   
       <div class="news-card">
         <img class="photo-bar" src="img/josue-michel-i9cTdRQIuUg-unsplash.png" alt="Image of person">
-        <p class="text">
+        <section class="text">
         <h3>What it is like to carry on a tradition with a friend that can't remember it</h3>
         Part of a series on Friendship, today we continue by telling stories of human life through conversations with our frinds.
-        </p>
+        </section>
       </div>
 
 
       <div class="news-card">
         <img class="photo-bar" src="img/new2_ella-deane-YTRtCfniV8I-unsplash.png" alt="Image of a hand holding a book">
-        <p class="text">
+        <section class="text">
         <h2>Rugged, Physical Work and reflection</h2>
         In Amos Velsinger's work the participating artists share a common desire for reading as dancing. The new piece premiered at the underground theatre The Place to be last friday.  
-        </p> 
+        </section> 
       </div>
 
       <div class="news-card">
         <img class="photo-bar" src="img/edmund-lou-LeC-Q8oVoTs-unsplash.png" alt="Image in black and white of a city">
-        <p class="text">
+        <section class="text">
         <h2><i>Dear comrades</i> - New documentary by Andrei Kontjalovskij </h2>
         Russian drama about the workers in Novocherkassk who in 1962 openly protested against wage cuts and price increases on basic foodstuffs.
-        </p>
+        </section>
       </div>
     </section>
     
