--- a/code/index.html
+++ b/code/index.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Tangerine&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&display=swap" rel="stylesheet">
-
+  <link rel="icon" type="image/png" size="18x18" href="./images/Ballerina-clipart.png">
 
 </head>
 
