--- a/code/index.html
+++ b/code/index.html
@@ -4,87 +4,93 @@
 
   <head>
     <meta charset="utf-8" />
-    <title>Project 2: The News Site</title>
+    <title>News site</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   
   <body>
-<div class="webpage">
     <header class="header-container">
-      <img class="logo" src="./logo.svg" />
+      <img class="logo" alt="logotype" src="./logo.svg" />
       <nav class="navigation">
         <div class="desktop-menu">
-          <div class="navigation-item"><a>One</a></div>
-          <div class="navigation-item"><a>Two</a></div>
-          <div class="navigation-item"><a>Three</a></div>
-          <div class="navigation-item"><a>Four</a></div>
+          <div class="navigation-item">
+            <a>One</a>
+          </div>
+          <div class="navigation-item">
+            <a>Two</a>
+          </div>
+          <div class="navigation-item">
+            <a>Three</a>
+          </div>
+          <div class="navigation-item">
+            <a>Four</a>
+          </div>
         </div>
-        <img class="mobile-menu" src="./hamburgare.png">
-        </div>
+        <img class="mobile-menu" alt="menu" src="./hamburgare.png">
       </nav>
     </header>
 
-  <section class="big-news-container">
-    <img class="big-news-image" src="./big-image.jpg" />
-    <section class="big-news-text">
-      <h1 class="rubrik"><a>Headline</a></h1>
-      <h2 class="underrubrik"> Article text</h2>
+    <section class="big-news-container">
+      <img class="big-news-image" alt="Main image" src="./big-image.jpg" />
+      <section class="big-news-text">
+        <h1 class="rubrik"><a>Headline</a></h1>
+        <h2 class="underrubrik"> Article text</h2>
       </section>
-  </section> 
+    </section> 
 
-  <section class="grid-news-container">
-    <div class="enhet">
-      <img class="news-card" src="./small-image.jpg" />
-      <p class="tile-text"><a>News</a></p>
-    </div>
-    <div class="enhet">
-      <img class="news-card" src="./small-image.jpg" />
-      <p class="tile-text"><a>News</a></p>
-    </div>
-    <div class="enhet">
-      <img class="news-card" src="./small-image.jpg" />
-      <p class="tile-text"><a>News</a></p>
-    </div>
-    <div class="enhet">
-      <img class="news-card" src="./small-image.jpg" />
-      <p class="tile-text"><a>News</a></p>
-    </div>
-    <div class="enhet">
-      <img class="news-card" src="./small-image.jpg" />
-      <p class="tile-text"><a>News</a></p>
-    </div>
-    <div class="enhet">
-      <img class="news-card" src="./small-image.jpg" />
-      <p class="tile-text"><a>News</a></p>
-    </div>
-    <div class="enhet">
-      <img class="news-card" src="./small-image.jpg" />
-      <p class="tile-text"><a>News</a></p>
-    </div>
-    <div class="enhet">
-      <img class="news-card" src="./small-image.jpg" />
-      <p class="tile-text"><a>News</a></p>
-    </div>
-    <div class="enhet">
-      <img class="news-card" src="./small-image.jpg" />
-      <p class="tile-text"><a>News</a></p>
-    </div>
-    <div class="enhet">
-      <img class="news-card" src="./small-image.jpg" />
-      <p class="tile-text"><a>News</a></p>
-    </div>
-    <div class="enhet">
-      <img class="news-card" src="./small-image.jpg" />
-      <p class="tile-text"><a>News</a></p>
-    </div>
-    <div class="enhet">
-      <img class="news-card" src="./small-image.jpg" />
-      <p class="tile-text"><a>News</a></p>
-    </div>
-    
-  </section>
-</div>
+    <section class="grid-news-container">
+      <div class="enhet">
+        <img class="news-card" alt="news image" src="./small-image.jpg" />
+        <p class="tile-text"><a>News</a></p>
+      </div>
+      <div class="enhet">
+        <img class="news-card" alt="news image" src="./small-image.jpg" />
+        <p class="tile-text"><a>News</a></p>
+      </div>
+      <div class="enhet">
+        <img class="news-card" alt="news image" src="./small-image.jpg" />
+        <p class="tile-text"><a>News</a></p>
+      </div>
+      <div class="enhet">
+        <img class="news-card" alt="news image" src="./small-image.jpg" />
+        <p class="tile-text"><a>News</a></p>
+      </div>
+      <div class="enhet">
+        <img class="news-card" alt="news image" src="./small-image.jpg" />
+        <p class="tile-text"><a>News</a></p>
+      </div>
+      <div class="enhet">
+        <img class="news-card" alt="news image" src="./small-image.jpg" />
+        <p class="tile-text"><a>News</a></p>
+      </div>
+      <div class="enhet">
+        <img class="news-card" alt="news image" src="./small-image.jpg" />
+        <p class="tile-text"><a>News</a></p>
+      </div>
+      <div class="enhet">
+        <img class="news-card" alt="news image" src="./small-image.jpg" />
+        <p class="tile-text"><a>News</a></p>
+      </div>
+      <div class="enhet">
+        <img class="news-card" alt="news image" src="./small-image.jpg" />
+        <p class="tile-text"><a>News</a></p>
+      </div>
+      <div class="enhet">
+        <img class="news-card" alt="news image" src="./small-image.jpg" />
+        <p class="tile-text"><a>News</a></p>
+      </div>
+      <div class="enhet">
+        <img class="news-card" alt="news image" src="./small-image.jpg" />
+        <p class="tile-text"><a>News</a></p>
+      </div>
+      <div class="enhet">
+        <img class="news-card" alt="news image" src="./small-image.jpg" />
+        <p class="tile-text"><a>News</a></p>
+      </div>
+      
+    </section>
+  </div>
   </body>
 
 </html>
