cleaning up the code

--- a/code/index.html
+++ b/code/index.html
@@ -1,90 +1,118 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="utf-8" />
+    <title>Ballet News</title>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Tangerine&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      size="18x18"
+      href="./images/Ballerina-clipart.png"
+    />
+  </head>
 
-<head>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="utf-8" />
-  <title>Ballet News</title>
-  <link rel="stylesheet" href="./style.css" />
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Tangerine&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Cormorant:wght@300&display=swap" rel="stylesheet">
-  <link rel="icon" type="image/png" size="18x18" href="./images/Ballerina-clipart.png">
-
-</head>
-
-<body>
-
-  <header>
-    <div class="hamburger">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    <div class="navbar">
-      <a class="nav-link" href="#about">About</a>
-      <a class="nav-link" href="#newsletter">Newsletter</a>
-      <a class="nav-link" href="#subscribe">Subscribe</a>
-    </div>
-  </header>
-
-  <section>
-    <div class="logo-h1-container">
-      <h1>
-        <img class="logo" img src=./images/Ballerina-clipart.png alt="Clipart ballerina dancing in a pink dress." />
-        Ballet News
-      </h1>
-    </div>
-  </section>
-
-  <section>
-    <div class="big-news-container">
-      <img src="./images/Ballerina-forest.png" alt="Ballerina dancing in a beautiful forest." class="big-news-image">
-    </div>
-    <div>
-      <p class="big-news-category"><a href="#big-news">LOREM</a></p><br>
-      <p class="big-news-extract"><a href="#big-news">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor
-          incididunt ut labore et
-          dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-          ea
-          commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
-          nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
-          anim
-          id est laborum.</a></p>
-    </div>
-  </section>
-
-  <section>
-    <div class="other-news-container">
-      <div class="other-news-card">
-        <img src="./images/Barre.jpg" alt="Ballerina in a black dress doing barre." class="other-news-image" />
-        <p class="other-news-extract"><a href=#other-news>Lorem ipsum dolor sit amet.</a></p>
+  <body>
+    <header>
+      <div class="hamburger">
+        <div></div>
+        <div></div>
+        <div></div>
       </div>
-      <div class="other-news-card">
-        <img src="./images/Black-dress.jpg" alt="Young, pensive woman wearing pink pointe shoes and a black dress."
-          class="other-news-image" />
-        <p class="other-news-extract"><a href="#other-news">Lorem ipsum dolor sit amet.</a></p>
+      <div class="navbar">
+        <a class="nav-link" href="#about">About</a>
+        <a class="nav-link" href="#newsletter">Newsletter</a>
+        <a class="nav-link" href="#subscribe">Subscribe</a>
       </div>
-      <div class="other-news-card">
-        <img src="./images/Young-ballerinas.jpg" alt="Two young ballerinas dancing in a studio."
-          class="other-news-image" />
-        <p class="other-news-extract"><a href="#other-news">Lorem ipsum dolor sit amet.</a></p>
+    </header>
+    <section>
+      <div class="logo-h1-container">
+        <h1>
+          <img class="logo" img src=./images/Ballerina-clipart.png alt="Clipart
+          ballerina dancing in a pink dress." /> Ballet News
+        </h1>
       </div>
-      <div class="other-news-card">
-        <img src="./images/Ballet-shoes.jpg" alt="Pink pointe shoes and a white tulle dress."
-          class="other-news-image" />
-        <p class="other-news-extract"><a href="#other-news">Lorem ipsum dolor sit amet.</a></p>
+    </section>
+    <section>
+      <div class="big-news-container">
+        <img
+          src="./images/Ballerina-forest.png"
+          alt="Ballerina dancing in a beautiful forest."
+          class="big-news-image"
+        />
       </div>
-    </div>
-  </section>
-
-  <hr>
-
-  <footer>
-    <p>&copy Caroline Fahlgren</p>
-  </footer>
-
-</body>
-
+      <div>
+        <p class="big-news-category"><a href="#big-news">LOREM</a></p>
+        <p class="big-news-extract">
+          <a href="#big-news"
+            >Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.</a
+          >
+        </p>
+      </div>
+    </section>
+    <section>
+      <div class="other-news-container">
+        <div class="other-news-card">
+          <img
+            src="./images/Barre.jpg"
+            alt="Ballerina in a black dress doing barre."
+            class="other-news-image"
+          />
+          <p class="other-news-extract">
+            <a href="#other-news">Lorem ipsum dolor sit amet.</a>
+          </p>
+        </div>
+        <div class="other-news-card">
+          <img
+            src="./images/Black-dress.jpg"
+            alt="Young, pensive woman wearing pink pointe shoes and a black dress."
+            class="other-news-image"
+          />
+          <p class="other-news-extract">
+            <a href="#other-news">Lorem ipsum dolor sit amet.</a>
+          </p>
+        </div>
+        <div class="other-news-card">
+          <img
+            src="./images/Young-ballerinas.jpg"
+            alt="Two young ballerinas dancing in a ballet studio."
+            class="other-news-image"
+          />
+          <p class="other-news-extract">
+            <a href="#other-news">Lorem ipsum dolor sit amet.</a>
+          </p>
+        </div>
+        <div class="other-news-card">
+          <img
+            src="./images/Ballet-shoes.jpg"
+            alt="Pink pointe shoes and a white tulle dress."
+            class="other-news-image"
+          />
+          <p class="other-news-extract">
+            <a href="#other-news">Lorem ipsum dolor sit amet.</a>
+          </p>
+        </div>
+      </div>
+    </section>
+    <hr />
+    <footer>
+      <p>&copy Caroline Fahlgren</p>
+    </footer>
+  </body>
 </html>
