--- a/code/index.html
+++ b/code/index.html
@@ -13,6 +13,7 @@
 
     <section class="big-news">
       <!-- The big news content -->
+      <div>hello</div>
     </section>
 
     <section class="">
