--- a/code/index.html
+++ b/code/index.html
@@ -9,10 +9,14 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <nav>
+        
+      </nav>
     </header>
 
     <section class="big-news">
       <!-- The big news content -->
+
     </section>
 
     <section class="">
